# OpenCV-OpenGL-JNI-Android

./: README.md
controller/: settings.gradle
controller/app/: build.gradle
controller/app/src/androidTest/java/com/opencv/controller/: ExampleInstrumentedTest.java
controller/app/src/main/: AndroidManifest.xml
controller/app/src/main/assets/: test.txt
controller/app/src/main/cpp/: CMakeLists.txt  detect_obj.cpp  detect_obj.h  native-lib.cpp  point_obj.cpp  point_obj.h  point_tracker.cpp  point_tracker.h  tflite_obj.cpp  tflite_obj.h  utils.h
controller/app/src/main/java/com/opencv/controller/: BluetoothService.java  Cube.java  DeviceListActivity.java  Elements.java  Line.java  MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MySensor.java  PermissionSupport.java
controller/app/src/main/res/layout/: activity_main.xml  control.xml
controller/app/src/main/res/values/: strings.xml  themes.xml
controller/app/src/main/res/values-night/: themes.xml
controller/app/src/main/res/xml/: file_paths.xml
controller/app/src/test/java/com/opencv/controller/: ExampleUnitTest.java
controller/gradle/wrapper/: gradle-wrapper.properties
controller/sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java
controller/tensorflow/include/tensorflow/lite/delegates/nnapi/: nnapi_delegate.cc
